--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
 <body>
   <h1>RankingClubs.com</h1>
   <nav class="leagues-bar">
-    <h3>All time leagues rank</h3>
-    <span class="bar-label">All time rank:</span>
+    <span class="bar-label">All time league rankings:</span>
     <a href="#" class="league-link">Premier League</a>
     <a href="#" class="league-link">Serie A</a>
     <a href="#" class="league-link">La Liga</a>
