--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
   <h1>RankingClubs.com</h1>
   <nav class="leagues-bar">
     <span class="bar-label">All time league rankings:</span>
-    <a href="#" class="league-link">Premier League</a>
-    <a href="#" class="league-link">Serie A</a>
-    <a href="#" class="league-link">La Liga</a>
-    <a href="#" class="league-link">Bundesliga</a>
-    <a href="#" class="league-link">Ligue 1</a>
-    <a href="#" class="league-link">Eredivisie</a>
-    <a href="#" class="league-link">Primeira Liga</a>
+    <a href="/rankingclubs/premier-league.html">Premier League</a>
+    <a href="/rankingclubs/serie-a.html">Serie A</a>
+    <a href="/rankingclubs/la-liga.html">LaLiga</a>
+    <a href="/rankingclubs/bundesliga.html">Bundesliga</a>
+    <a href="/rankingclubs/superlig.html">Süperlig</a>
+    <a href="/rankingclubs/eredivisie.html">Eredivisie</a>
+    <a href="/rankingclubs/premier-liga.html">Premier Liga</a>
   </nav>
   <div class="filters">
     <label>Da: <select id="startYear"></select></label>
