--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   "Steaua Bucarest", "Celtic", "Rangers"
 ];
     const logos = {
-  "Atalanta": "https://upload.wikimedia.org/wikipedia/it/8/81/Logo_Atalanta_Bergamo.svg"
+  "Atalanta": "https://upload.wikimedia.org/wikipedia/it/8/81/Logo_Atalanta_Bergamo.svg",
   "Osasuna": "https://upload.wikimedia.org/wikipedia/en/5/5e/CA_Osasuna_logo.svg",
   "Udinese": "https://upload.wikimedia.org/wikipedia/en/2/2e/Udinese_Calcio_logo.svg",
   "Napoli": "https://upload.wikimedia.org/wikipedia/commons/2/2d/SSC_Napoli.svg",
@@ -256,9 +256,10 @@
   "Steaua Bucarest": "https://upload.wikimedia.org/wikipedia/en/9/9f/FC_Steaua_Bucuresti_logo.svg",
   "Celtic": "https://upload.wikimedia.org/wikipedia/en/1/1c/Celtic_FC.svg",
   "Rangers": "https://upload.wikimedia.org/wikipedia/en/5/5c/Rangers_FC.svg",
-      "Real Madrid": "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg",
-      "Milan": "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg",
-      "Barcellona": "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg"
+  "Real Madrid": "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg",
+  "Roma": "https://upload.wikimedia.org/wikipedia/it/0/0e/AS_Roma_Logo_2017.svg",     
+  "Milan": "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg",
+  "Barcellona": "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg"
     };
     const groups = [
       { prefix: "CL", label: "TotCL,CL,F,SF,Q,O,S,P,VS,DR", class: "cl-column" },
