--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
 ];
     const logos = {
   "Atalanta": "https://upload.wikimedia.org/wikipedia/it/8/81/Logo_Atalanta_Bergamo.svg",
+  "Lazio": "Stemma_della_Società_Sportiva_Lazio.svg",
   "Osasuna": "https://upload.wikimedia.org/wikipedia/en/5/5e/CA_Osasuna_logo.svg",
   "Udinese": "https://upload.wikimedia.org/wikipedia/en/2/2e/Udinese_Calcio_logo.svg",
   "Napoli": "https://upload.wikimedia.org/wikipedia/commons/2/2d/SSC_Napoli.svg",
