--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   "Lazio": "https://upload.wikimedia.org/wikipedia/it/6/62/Stemma_della_Società_Sportiva_Lazio.svg",
   "Osasuna": "https://upload.wikimedia.org/wikipedia/en/5/5e/CA_Osasuna_logo.svg",
   "Udinese": "https://upload.wikimedia.org/wikipedia/en/2/2e/Udinese_Calcio_logo.svg",
-  "Napoli": "https://upload.wikimedia.org/wikipedia/commons/2/2d/SSC_Napoli.svg",
+  "Napoli": "https://upload.wikimedia.org/wikipedia/commons/0/00/SSC_Napoli_2024_%28deep_blue_navy%29.svg",
   "Livorno": "https://upload.wikimedia.org/wikipedia/en/1/1c/AS_Livorno_Calcio_logo.svg",
   "Amburgo": "https://upload.wikimedia.org/wikipedia/commons/6/66/Hamburger_SV.svg",
   "Friburgo": "https://upload.wikimedia.org/wikipedia/en/0/0e/SC_Freiburg_logo.svg",
