--- a/index.html
+++ b/index.html
@@ -303,7 +303,19 @@
         "Milan": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:6 },
         "Barcellona": { EL_TotEL: 4, EL_EL: 1, EL_F: 1, SC_SC: 1 },
         "Stade Reims": { CL_F: 1, CL_P:1, CL_VS:3, CL_DR:6},
-        "Hibernian": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:4},
+          "Hibernian": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:4},
+"MTK Budapest": {CL_Q: 1, CL_P:1, CL_VS:1, CL_DR:4},
+"Partinzan Beograd":{CL_Q: 1, CL_P:1, CL_VS:1, CL_DR:2},
+"Djurgården":{CL_Q: 1, CL_P:1, CL_VS:-1, CL_DR:0},
+"Rapid Wien":{CL_Q: 1, CL_P:1, CL_VS:-1, CL_DR:-1},
+"Saarbrücken":{CL_O: 1, CL_P:1, CL_VS:0, CL_DR:-2}, 
+"Aarhus":{CL_O: 1, CL_P:1, CL_VS:-1, CL_DR:-2},
+"Sporting Clube de Portugal":{CL_O: 1, CL_P:1, CL_VS:-1, CL_DR:-3},
+"Gwardia Warszawa":{CL_O: 1, CL_P:1, CL_VS:-1, CL_DR:-3},
+"Rot-Weiss Essen":{CL_O: 1, CL_P:1, CL_VS:-1, CL_DR:-4},
+"Anderlecht":{CL_O: 1, CL_P:1, CL_VS:-2, CL_DR:-6},
+"Servette":{CL_O: 1, CL_P:1, CL_VS:-2, CL_DR:-7},
+"PSV Eindhoven":{CL_O: 1, CL_P:1, CL_VS:0, CL_DR:-4}
       },
       "1956/57": {
         "Real Madrid": { CL_TotCL: 6, CL_CL: 1, CL_SF: 1, EL_Q: 1, SC_SC: 0 },
