--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofia", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
   "Dinamo Berlin", "Dinamo Bucarest", "Dinamo Dresda", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
-  "Dinamo Zagabria", "Diosgyor", "Djurgärden", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praga", "Dundalk", 
+  "Dinamo Zagabria", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praga", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahce", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
@@ -251,14 +251,14 @@
   "Olympiakos", "Olympiakos Leukōsias", "Olympique Lyon", "Olympique Marseille", "Omonia", "OPS", "Örgryte", "Osasuna", "Osijek", "Ankaraspor", "Östers IF", 
   "Oțelul Galați", "P'yownik", "Paços de Ferreira", "Palermo", "Panachaïkī", "Panathīnaïkos", "Pandurii Târgu Jiu", "Paniōnos", "PAOK Thessalonìki", "Paris Saint-Germain", 
   "Parma", "Partinzan Beograd", "Partizani Tiranë", "Perugia", "Petrolul Ploiești", "Petrzalka", "Pezoporikos Larnaca", "Poli Timisoara", "Polonia Bytom", "Portadown", 
-  "Porto", "Portsmouth", "Progres Niedercon", "Progresul Bucarest", "PSV", "Qairat", "Qarabag", "Qəbələ", "Queens Park Rangers", "Rabat Ajax", "Racing Santander", 
-  "Radnicki Nis", "Raith Rovers", "Raków Częstochowa", "Randers", "Rangers", "Rapid Bucarest", "Rapid Vienna", "Rayo Vallecano", "RB Lipsia", "Real Betis Siviglia", 
+  "Porto", "Portsmouth", "Progres Niedercon", "Progresul Bucarest", "PSV Eindhoven", "Qairat", "Qarabag", "Qəbələ", "Queens Park Rangers", "Rabat Ajax", "Racing Santander", 
+  "Radnicki Nis", "Raith Rovers", "Raków Częstochowa", "Randers", "Rangers", "Rapid Bucarest", "Rapid Wien", "Rayo Vallecano", "RB Lipsia", "Real Betis Siviglia", 
   "Real Madrid", "Real Sociedad", "Real Valladolid", "Red Boys Differdange", "Reipas Lahti", "Rennes", "RFC Liegi", "RFS Riga", "Rijeka", "Rio Ave", "Roda JC Kerkrade", 
   "Roma", "RoPS", "Rosenborg", "Rostov", "Rot-Weiss Erfurt", "Rot-Weiss Essen", "Rotor Volvograd", "Rubin Kazan", "Ruch Chorzow", "RWD Molenbeek", "Saarbrücken", 
   "Sachsen Leipzig", "Sachtar Donec'k", "Saint Etienne", "Salisburgo", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Siviglia", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
-  "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Lussemburgo", "Sporting Gijón", "Sporting Lisbona", "Sportul Studentesc Bucarest", 
+  "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Lussemburgo", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
   "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua Bucarest", "Stella Rossa", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
