--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
   "Aalborg BK", "Aarau", "Aarhus", "AB", "Aberdeen", "Académica Coimbra", "Admira Wien", "Admira Wacker", "ADO Den Haag",
   "AE Larisas", "AEK Athīna", "AEK Làrnaka", "AEL Lemesos", "AIK Solna", "Ajax", "Akademik Sofija", "Alanija Vladikavkaz",
   "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Anversa", 
-  "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "ArÄ«s Limassol", 
+  "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
   "Athlone Town", "Atletico Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
-  "B1913", "Ballkani", "Banik Ostrava", "Barcellona", "Basilea", "Bastia", "BATE Borisov", "Bayer Leverkusen", "Bayern Monaco", 
+  "B1913", "Ballkani", "Banik Ostrava", "Barcelona", "Basilea", "Bastia", "BATE Borisov", "Bayer Leverkusen", "Bayern München", 
   "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Besiktas", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
@@ -278,7 +278,7 @@
     flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/f/fe/600px_horizontal_bisection_HEX-DECDBB_HEX-5A2D81.svg"
   },
-  "Barcellona": {
+  "Barcelona": {
     flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/4f/600px_Blue_HEX-00529F_Gold_HEX-FFDF1A_White_Purple_HEX-A2214B_Red_HEX-E1393D.svg"
   }
@@ -301,7 +301,7 @@
       "1955/56": {
         "Real Madrid": { CL_CL: 1, CL_P:1, CL_VS:3, CL_DR:10 },
         "Milan": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:6 },
-        "Barcellona": { EL_TotEL: 4, EL_EL: 1, EL_F: 1, SC_SC: 1 },
+        "Barcelona": { EL_TotEL: 4, EL_EL: 1, EL_F: 1, SC_SC: 1 },
         "Stade Reims": { CL_F: 1, CL_P:1, CL_VS:3, CL_DR:6},
           "Hibernian": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:4},
 "MTK Budapest": {CL_Q: 1, CL_P:1, CL_VS:1, CL_DR:4},
