--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   const teamInfo = {
   "Milan": {
     flag: "https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
-    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"
   },
   "Real Madrid": {
     flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
